add tournament_details functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="page_div">
         <h1 id="web_app_title">Tournament <br> Organiser</h1>
 
-        <h1 id="login_page_title">LOGIN</h1>
+        <h1 id="page_title">LOGIN</h1>
 
         <div id="page_content">
             <input type="text" id="username" class="login_element" placeholder="username..." />
